--- a/helpline.htm
+++ b/helpline.htm
@@ -7,7 +7,7 @@
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Helpline</title>
       <style>
           body{
@@ -247,9 +247,8 @@ Pincode : 800001
 		</div>		   
 	    
 	</div>
-    <br><br><br><br><br><br>
 </div>
-      <footer class="py-4 bg-dark text-white-50 navbar-fixed-bottom" style="padding-top:100px">
+      <footer class="py-4 bg-dark text-white-50 navbar-fixed-bottom" style="margin-top:524px">
         <div class="container text-center">
           <small>Developed by : WeTeam, NIT Raipur</small>
         </div>
