--- a/helpline.html
+++ b/helpline.html
@@ -7,7 +7,7 @@
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    
     <title>Helpline</title>
       <style>
           body{
@@ -128,9 +128,9 @@ h2{
 				margin-top:25px; 
 			}
 		}
-          #sticky-footer{
-             
-          }
+    small {
+    font-size: 120%;
+    }
       </style>
   </head>
   <body>
@@ -171,7 +171,7 @@ h2{
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item ">
-          <a class="nav-link" href="index.htm">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="donate.html">Donate</a>
