--- a/donate.html
+++ b/donate.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -72,7 +72,7 @@ h2{
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="index.htm">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="donate.html">Donate</a>
@@ -98,7 +98,7 @@ h2{
       </div>
       <footer id="sticky-footer" class="py-4 bg-dark text-white-50" style="">
         <div class="container text-center">
-          <small>Developed by : WeTeam, NIT Raipur</small>
+          <small style="font-size: 120%;">Developed by : WeTeam, NIT Raipur</small>
         </div>
 </footer>
       
