--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
       <br>
         <div id="maincontent">
             <div id="searchbox">
-            Name of Location :&nbsp;
-            <input type="text" id="searchplace" name="searchplace" value="" onkeydown="search(event);">
-                <input type="button" id="searchbutton" onclick="searchMap()" value="Locate">
+            Search :&nbsp;
+            <input type="text" id="searchplace" name="searchplace" value="" onkeydown="search(event);"><br>
+                <input type="button" id="searchbutton" onclick="searchMap()" value="Locate" style="margin: 10px;">
                 </div>
             <br>
             <div id="NW">
