--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.htm">
-                <img src="version_beta-01.png" alt="logo" height="50em" width="100em">
+                <img src="version_beta-01.png" alt="logo" height="30em" width="60em">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.htm" style="font-size:0.75em">Home</a>
+                        <a class="nav-link" href="index.html" style="font-size:0.75em">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="donate.html" style="font-size:0.75em">Donate</a>
